--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,18 @@
   "description": "Add some functionalities to debug occ",
   "short_name": "Occ Debugger",
   "permissions": ["tabs", "activeTab", "storage", "<all_urls>"],
-  "web_accessible_resources": ["occ-debugger.js"],
+  "web_accessible_resources": ["scripts/occDebugger.js"],
   "background": {
-    "scripts": ["index.js"],
-    "persistent": true
+    "scripts": ["background.js"],
+    "persistent": false
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["index.js"],
+      "all_frames": true
+    }
+  ],
   "browser_action": {
     "default_title": "OCC Debugger",
     "default_popup": "popup/index.html",
