--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
-    "preact": "^10.0.5"
+    "preact": "^10.0.5",
+    "preact-photon": "^1.3.0"
   }
 }
