--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.5.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^4.12.0",
