--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,15 +5,15 @@
   "description": "Add some functionalities to debug occ",
   "short_name": "Occ Debugger",
   "permissions": ["tabs", "activeTab", "storage", "<all_urls>"],
-  "web_accessible_resources": ["src/occDebugger.js"],
+  "web_accessible_resources": ["scripts/occDebugger.js"],
   "background": {
-    "scripts": ["src/background.js"],
+    "scripts": ["scripts/background.js"],
     "persistent": false
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["src/inject.js"],
+      "js": ["scripts/inject.js"],
       "all_frames": true
     }
   ],
