--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TODO",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --config ./webpack/webpack.production.js"
   },
   "repository": {
     "type": "git",
@@ -17,20 +17,23 @@
   },
   "homepage": "https://github.com/williammustaffa/occ-debugger#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.5.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^4.12.0",
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "webpack-cli": "^3.3.7",
+    "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "preact": "^10.0.5",
