--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
     "preact": "^10.0.5",
-    "preact-photon": "^1.3.0"
+    "preact-photon": "williammustaffa/preact-photon",
+    "photon": "williammustaffa/photon"
   }
 }
