--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TODO",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config ./webpack/webpack.production.js"
+    "build": "webpack --config ./webpack/webpack.prod.js",
+    "start": "webpack --config ./webpack/webpack.dev.js --watch "
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@babel/preset-env": "^7.5.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^3.2.0",
     "file-loader": "^6.2.0",
@@ -35,11 +37,14 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
+    "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "core-js": "^3.8.1",
+    "photon": "williammustaffa/photon",
     "preact": "^10.0.5",
     "preact-photon": "williammustaffa/preact-photon",
-    "photon": "williammustaffa/photon"
+    "regenerator-runtime": "^0.13.7"
   }
 }
