--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "core-js": "^3.8.1",
     "photon": "williammustaffa/photon",
     "preact": "^10.0.5",
-    "preact-photon": "williammustaffa/preact-photon",
     "regenerator-runtime": "^0.13.7"
   }
 }
