--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "core-js": "^3.8.1",
-    "photon": "williammustaffa/photon",
-    "preact": "^10.0.5",
+    "photon-preact": "williammustaffa/photon-preact",
     "regenerator-runtime": "^0.13.7"
   }
 }
