--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,6 +6,7 @@
   "short_name": "Occ Debugger",
   "permissions": ["tabs", "activeTab", "storage", "<all_urls>"],
   "web_accessible_resources": ["scripts/occ-debugger.js"],
+  "devtools_page": "views/devtools/index.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -15,7 +16,7 @@
   ],
   "browser_action": {
     "default_title": "OCC Debugger",
-    "default_popup": "popup/index.html",
+    "default_popup": "views/popup/index.html",
     "default_icon": {
       "16": "icons/icon16.png",
       "32": "icons/icon32.png"
