--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,7 +19,8 @@
     "default_popup": "views/popup/index.html",
     "default_icon": {
       "16": "icons/icon16.png",
-      "32": "icons/icon32.png"
+      "32": "icons/icon32.png",
+      "128": "icons/icon128.png"
     }
   }
  }
