--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,12 +5,12 @@
   "description": "Add some functionalities to debug occ",
   "short_name": "Occ Debugger",
   "permissions": ["tabs", "activeTab", "storage", "<all_urls>"],
-  "web_accessible_resources": ["scripts/occ-debugger.js"],
+  "web_accessible_resources": ["scripts/occDebugger.js"],
   "devtools_page": "views/devtools/index.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["scripts/inject.js"],
+      "js": ["scripts/contentScript.js"],
       "all_frames": false
     }
   ],
