--- a/package.json
+++ b/package.json
@@ -23,27 +23,19 @@
     "@babel/preset-env": "^7.5.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
+    "file-loader": "^6.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^3.2.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "node-sass": "^4.12.0",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
     "styled-components": "^5.2.1",
-    "url-loader": "^4.1.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
-    "webpack-extension-reloader": "^1.1.4",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "webpack-extension-reloader": "^1.1.4"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
-    "core-js": "^3.8.1",
-    "photon": "williammustaffa/photon",
     "preact": "^10.0.5",
+    "core-js": "^3.8.1",
     "regenerator-runtime": "^0.13.7"
   }
 }
