--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "occ-debugger",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A simple debugger to help occ developers",
   "scripts": {
-    "build": "webpack --config ./webpack/webpack.prod.js",
-    "start": "webpack --config ./webpack/webpack.dev.js --watch "
+    "start": "webpack --config ./webpack/webpack.dev.js --watch ",
+    "build": "npm run extension:build && npm run extension:zip",
+    "extension:build": "webpack --config ./webpack/webpack.prod.js",
+    "extension:zip": "node build.js"
   },
   "repository": {
     "type": "git",
@@ -23,15 +25,16 @@
     "@babel/preset-env": "^7.5.5",
     "babel": "^6.23.0",
     "babel-loader": "^8.0.6",
-    "file-loader": "^6.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "styled-components": "^5.2.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
+    "webpack-extension-reloader": "^1.1.4",
     "webpack-merge": "^5.7.3",
-    "webpack-extension-reloader": "^1.1.4"
+    "zip-folder": "^1.0.0"
   },
   "dependencies": {
     "preact": "^10.0.5",
