--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,15 @@
 {
   "manifest_version": 2,
   "name": "OCC Debugger",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Add some functionalities to debug occ",
   "short_name": "Occ Debugger",
   "permissions": ["tabs", "activeTab", "storage", "<all_urls>"],
   "web_accessible_resources": ["scripts/occDebugger.js"],
   "devtools_page": "views/devtools/index.html",
+  "background": {
+    "scripts": ["scripts/background.js"]
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
