--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,10 @@
   "description": "Add some functionalities to debug occ",
   "short_name": "Occ Debugger",
   "permissions": ["tabs", "storage", "<all_urls>"],
-  "web_accessible_resources": ["scripts/occDebugger.js"],
+  "web_accessible_resources": [
+    "scripts/occDebugger.js",
+    "views/storefront/index.js"
+  ],
   "devtools_page": "views/devtools/index.html",
   "background": {
     "scripts": ["scripts/background.js"]
