--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "clipboard-copy": "^4.0.1",
     "core-js": "^3.8.1",
+    "date-fns": "^2.20.1",
     "preact": "^10.0.5",
     "regenerator-runtime": "^0.13.7"
   }
