--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "core-js": "^3.8.1",
     "date-fns": "^2.20.1",
     "preact": "^10.0.5",
+    "react-rnd": "^10.3.4",
     "regenerator-runtime": "^0.13.7"
   }
 }
