--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "styled-components": "^5.2.1",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2",
     "webpack-extension-reloader": "^1.1.4",
-    "webpack-merge": "^5.7.3",
+    "webpack-merge": "^5.8.0",
     "zip-folder": "^1.0.0"
   },
   "dependencies": {
