--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.4.3",
   "description": "A simple debugger to help occ developers",
   "scripts": {
-    "start": "webpack --config ./webpack/webpack.dev.js --watch ",
-    "build": "npm run extension:build && npm run extension:zip",
-    "extension:build": "webpack --config ./webpack/webpack.prod.js",
-    "extension:zip": "node build.js"
+    "start": "NODE_ENV=development rollup -c ./build/index.js -w",
+    "build": "NODE_ENV=production rollup -c ./build/index.js",
+    "extension:zip": "node build.js",
+    "extension:deploy": "npm run build && npm run extension:zip"
   },
   "repository": {
     "type": "git",
@@ -19,28 +19,28 @@
   },
   "homepage": "https://github.com/williammustaffa/occ-debugger#readme",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.5.5",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
+    "@babel/core": "^7.22.17",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "@rollup/plugin-alias": "^5.0.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-html": "^1.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@web/rollup-plugin-copy": "^0.4.0",
+    "rollup": "^3.29.0",
+    "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-replace": "^2.2.0",
     "styled-components": "^5.2.1",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
-    "webpack-extension-reloader": "^1.1.4",
-    "webpack-merge": "^5.7.3",
     "zip-folder": "^1.0.0"
   },
   "dependencies": {
     "clipboard-copy": "^4.0.1",
     "core-js": "^3.8.1",
     "date-fns": "^2.20.1",
-    "preact": "^10.0.5",
-    "regenerator-runtime": "^0.13.7"
+    "lodash": "^4.17.21",
+    "preact": "^10.0.5"
   }
 }
