--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "NODE_ENV=development rollup -c ./build/index.js -w",
     "build": "NODE_ENV=production rollup -c ./build/index.js",
-    "extension:zip": "node build.js",
-    "extension:deploy": "npm run build && npm run extension:zip"
+    "extension:deploy": "npm run build && npm run extension:postBundle",
+    "extension:postBundle": "node scripts/postBundle.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "@web/rollup-plugin-copy": "^0.4.0",
     "rollup": "^3.29.0",
     "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-replace": "^2.2.0",
     "styled-components": "^5.2.1",
     "zip-folder": "^1.0.0"
